data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1985.wast
;; 6. **Test Description**: Import a function with multidimensional input and output and conditionally branch based on its i32 output using `br_if`. Verify the stack consistency after the call and the branch.    - **Constraint Checked**: Correct branching behavior and stack handling with complex function signatures across module boundaries.    - **Relation to Control Flow**: Tests multifaceted operand stack adjustments due to cross-module function interactions.

(assert_invalid
  (module
    (import "env" "complexFunc" (func $complexFunc (param i32 i32) (result i32 i32)))
    (func $test
      (block (result i32)
        (call $complexFunc (i32.const 0) (i32.const 0))
        (br_if 0 (i32.const 1))
      )
      (i32.eqz) (drop)
    )
  )
  "type mismatch"
)